cmake_minimum_required(VERSION 3.14)
project(DataStructure)

set(CMAKE_CXX_STANDARD 11)

add_executable(DataStructure "Code Snippets/Cpp_Review/main.cpp" "Code Snippets/Cpp_Review/OOP/general.h" "Code Snippets/Cpp_Review/Macro/example.h" "Code Snippets/Cpp_Review/PassingTypes/passing_types.h" "Code Snippets/Cpp_Review/Pointers/pointers.h" "Code Snippets/Cpp_Review/Pointers/simple_class.h")